--- a/citations.bib
+++ b/citations.bib
@@ -7,14 +7,14 @@
   publisher = "Association for Computational Linguistics",
   url       = "https://www.aclweb.org/anthology/D19-5203",
   pages     = "45--53",
-},
+}
 @mastersthesis{Dugan:20,
   author    = {Liam Dugan},
   title     = {Learning Formality from Japanese-English Parallel Corpora},
   school    = {University of Pennsylvania},
   year      = {2020},
   url       = "http://liamdugan.com/static/thesis-bb3055b500391857a7b237a22a6f18e5.pdf",
-},
+}
 @inproceedings{Neubig:11,
   author    = {Graham Neubig and Yosuke Nakata and Shinsuke Mori},
   title     = {Pointwise Prediction for Robust, Adaptable Japanese Morphological Analysis},
@@ -38,9 +38,32 @@
   url       = "https://aclanthology.org/2021.wat-1.13.pdf",
   pages     = "133--137"
 }
-@inproceedings{ott2019fairseq,
-  title = {fairseq: A Fast, Extensible Toolkit for Sequence Modeling},
-  author = {Myle Ott and Sergey Edunov and Alexei Baevski and Angela Fan and Sam Gross and Nathan Ng and David Grangier and Michael Auli},
-  booktitle = {Proceedings of NAACL-HLT 2019: Demonstrations},
-  year = {2019},
+@misc{vaswani2017attention,
+  title={Attention Is All You Need}, 
+  author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+  year={2017},
+  eprint={1706.03762},
+  archivePrefix={arXiv},
+  primaryClass={cs.CL}
+}
+@misc{liu2020deep,
+  title={Very Deep Transformers for Neural Machine Translation}, 
+  author={Xiaodong Liu and Kevin Duh and Liyuan Liu and Jianfeng Gao},
+  year={2020},
+  eprint={2008.07772},
+  archivePrefix={arXiv},
+  primaryClass={cs.CL}
+}
+@inproceedings{Kudo2005MeCabY,
+  title={MeCab : Yet Another Part-of-Speech and Morphological Analyzer},
+  author={Takumitsu Kudo},
+  year={2005}
+}
+@misc{ott2019fairseq,
+  title={fairseq: A Fast, Extensible Toolkit for Sequence Modeling}, 
+  author={Myle Ott and Sergey Edunov and Alexei Baevski and Angela Fan and Sam Gross and Nathan Ng and David Grangier and Michael Auli},
+  year={2019},
+  eprint={1904.01038},
+  archivePrefix={arXiv},
+  primaryClass={cs.CL}
 }
