Add a motivation section

--- a/citations.bib
+++ b/citations.bib
@@ -67,3 +67,37 @@
   archivePrefix={arXiv},
   primaryClass={cs.CL}
 }
+@inproceedings{niu-etal-2018-multi,
+    title = "Multi-Task Neural Models for Translating Between Styles Within and Across Languages",
+    author = "Niu, Xing  and
+      Rao, Sudha  and
+      Carpuat, Marine",
+    booktitle = "Proceedings of the 27th International Conference on Computational Linguistics",
+    month = aug,
+    year = "2018",
+    address = "Santa Fe, New Mexico, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/C18-1086",
+    pages = "1008--1021",
+    abstract = "Generating natural language requires conveying content in an appropriate style. We explore two related tasks on generating text of varying formality: monolingual formality transfer and formality-sensitive machine translation. We propose to solve these tasks jointly using multi-task learning, and show that our models achieve state-of-the-art performance for formality transfer and are able to perform formality-sensitive translation without being explicitly trained on style-annotated translation examples.",
+}
+@article{pavlick-tetreault-2016-empirical,
+    title = "An Empirical Analysis of Formality in Online Communication",
+    author = "Pavlick, Ellie  and
+      Tetreault, Joel",
+    journal = "Transactions of the Association for Computational Linguistics",
+    volume = "4",
+    year = "2016",
+    url = "https://aclanthology.org/Q16-1005",
+    doi = "10.1162/tacl_a_00083",
+    pages = "61--74",
+    abstract = "This paper presents an empirical study of linguistic formality. We perform an analysis of humans{'} perceptions of formality in four different genres. These findings are used to develop a statistical model for predicting formality, which is evaluated under different feature settings and genres. We apply our model to an investigation of formality in online discussion forums, and present findings consistent with theories of formality and linguistic coordination.",
+}
+@misc{rao2018dear,
+      title={Dear Sir or Madam, May I introduce the GYAFC Dataset: Corpus, Benchmarks and Metrics for Formality Style Transfer}, 
+      author={Sudha Rao and Joel Tetreault},
+      year={2018},
+      eprint={1803.06535},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
