--- a/report.tex
+++ b/report.tex
@@ -98,6 +98,10 @@ style=alphabetic,
 
 \newpage
 
+\section{Motivation}
+
+Language can work in extremely subtle ways, and sometimes very small changes can drastically alter the undertone of a sentence or an utterance \cite{Feely:19} \cite{niu-etal-2018-multi}: tiny details such as intonation, conjugation, choice of vocabulary, as well as many factors that would often be overlooked by neural models when extracting meaning \cite{pavlick-tetreault-2016-empirical}. While general sequence-to-sequence machine translation is capable of producing results that are very coherent and semantically close to the target output, small details such as formality can often be neglected by the model \cite{rao2018dear} - details that can make or break a career if approached carelessly by a human. As such, we propose systems that aim at adapting existing neural machine translation architectures, so that they would be able to classify sentences according to their formality and reproduce sentences in the correct formality class. 
+
 \section{Training Data}
 
 \subsection{Choice of Corpus}
