Add introduction and future work sections

--- a/citations.bib
+++ b/citations.bib
@@ -101,3 +101,10 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+@article{article,
+author = {Heylighen, Francis},
+year = {1970},
+month = {02},
+pages = {},
+title = {Formality of Language: definition, measurement and behavioral determinants}
+}
