Add future work section

--- a/report.tex
+++ b/report.tex
@@ -238,7 +238,13 @@ Our model's understanding of formality is undoubtedly one of the most important 
 
 \section{Future work}
 
-\subsection{Can Formality Encoding be Transferred?}
+\subsection{Can formality encoding be transferred?}
+
+Since our encoders are language-dependent, for formality encoding to be transferrable across languages, we would necessarily need to align our word embeddings across different languages for a transfer learning task to succeed. 
+
+\subsection{Can our work be generalised to other multi-domain scenarios?}
+
+
 
 \newpage
 \printbibliography
