--- a/report.tex
+++ b/report.tex
@@ -196,7 +196,7 @@ For Japanese language pre-processing, we relied on the sentence tokenisation too
 
 This can be seen as a special case of the base translation model, except that the source and the target languages are identical and we measure its ability to reconstruct the original sentence as well as the correct formality label. It follows the same model architecture as the base translation model. During our experiments, we found that the number of transformer encoder and decoder layers had a negative effect on the model's ability to perform the sentence reconstruction task: with the default number of layers ($6$), the model would emit the highest-frequency word in every position. This is potentially due to the relative simplicity of the task and the model's large size, the combination of which caused a propsentiy towards overfitting.
 
-On our Japanese corpus, we were able to achieve a BLEU score of $.648$ when benchmarked against the original sentence.
+On our Japanese corpus, we were able to achieve a BLEU score of $64.8$ when benchmarked against the original sentence.
 
 \subsection{Adding the Classifier}
 
@@ -204,9 +204,11 @@ We decompose the usual encoder-decoder, using the encoder output as the basis fo
 
 \subsubsection{Autoencoder-Reconstructor plus Classifier}
 
-The choice of the hyper-parameter representing the weight of formality label loss in the total loss was initially chosen to be $.5$. We found that under such a split, the reconstruction performance was barely affected affected ($.632$ BLEU score, compared to $.648$ without classification loss). The classification accuracy at $.800$ is somewhat poor, comparable to what we achieved from the pre-trained encoder $.816$, but disappointing when considering that the encoder was being fine-tuned under this new setting.
+The choice of the hyper-parameter representing the weight of formality label loss in the total loss was initially chosen to be $.5$. We found that under such a split, the reconstruction performance was barely affected affected ($63.2$ BLEU score, compared to $.648$ without classification loss). The classification accuracy at $.800$ is somewhat poor, comparable to what we achieved from the pre-trained encoder $.816$, but disappointing when considering that the encoder was being fine-tuned under this new setting.
 
 Is the translation task interfering with formality classification? We try to answer that question by turning off the decoder and training the model only on the classification loss. To our surprise, classification accuracy remained roughly the same with the decoder turned off, at $.799$. There are multiple potential reasons for such an observed effect: it is possible that the transformer encoder (or token embedding sequences in general) do not preserve sentence formality well; it could be that sentence formality is preserved, but not linearly and therefore our classifier was unable to extract that information; finally, the noise level of our procedurally-generated formality labels may have played a role in limiting the potential of any classifier trained on our data.
+
+Is a linear classifier not powerful enough? We tried answering this question by adding a feed-forward layer to our classifier. The classification accuracy of the resulting system is similar to the one with a linear classifier, but the sentence regeneration quality significantly reduced: BLEU dropped to $41.6$. 
 
 \subsection{Formality Autoencoder}
 
