--- a/report.tex
+++ b/report.tex
@@ -188,9 +188,11 @@ A number of possible architectures could be used to integrate the translation ta
 
 We first build a base translation model that doesn't take formality into account. We will use its performance as a baseline and attempt to beat its performance with our formality-aware model. For test cases where either the source or the target language doesn't have strong formality classes (such as Japanese-English or vice versa), we are only interested in the translation quality. For cases where both the source and the target language have strong formality classes (such as Korean-Japanese), we are also interested in formality class correspondance.
 
-The base translation model we choose for our task an autoregressive transformer model \cite{vaswani2017attention}, which was selected due to its success in machine translation \cite{liu2020deep}. The encoder-decoder construction is significant for us, since the pooled encoder output is going to be the basis for our formality classifier (similar to what we did with the pre-trained Japanese BERT). 
+The base translation model we choose for our task an autoregressive transformer model \cite{vaswani2017attention}, which was selected due to its success in machine translation \cite{liu2020deep}. The encoder-decoder construction is significant for us, since the pooled encoder output is going to be the basis for our formality classifier (similar to what we did with the pre-trained Japanese BERT).
 
 For Japanese language pre-processing, we relied on the sentence tokenisation tool by Mecab \cite{Kudo2005MeCabY}. For pre-processing English sentences, we used the tokenisation tool by fairseq \cite{ott2019fairseq}.
+
+We encountered significant difficulties when constructing the base Japanese to English translator. Due to the diverse and noisy nature of our corpus, as well as the tendency towards subject omission in Japanese, our translator could not perform even the most basic translation task, regardless of the hyper-parameters we choose. We found that careful pre-processing of our data goes a long way to helping the performance of the base translator: after pruning our dataset down to around $20\%$ its original size and consisting only of grammatically complete sentences, our model could reach a respectable performance on the held-out part of the cleaned dataset ($26.3$ BLEU score) while also perform reasonably well on the original larger dataset.
 
 \subsection{Base Autoencoder-Reconstructor}
 
