--- a/report.tex
+++ b/report.tex
@@ -166,7 +166,7 @@ The setup for this experiment is simple: we take a pre-trained Japanese language
 
 The other approach is to regard the problem as a two-class classification task. We do not introduce a third class of ambiguous sentences under this setting, since it is questionable from a linguistic point of view to label these sentences as "formality-free". This is the approach which we experimented on.
 
-The pre-trained model that we used was BertJapanese, developed by Masatoshi Suzuki at the Tohoku NLP lab and available in the transformers package by huggingface. The model converts a character-tokenised sentence into a $768$-dimension embedding which we use as the output for our classifier. Given the low dimensionality of our output, we choose the simplest model architecture possible: a linear layer and a log softmax output processing layer.
+The pre-trained model that we used was BertJapanese, developed by Masatoshi Suzuki at the Tohoku NLP lab and available in the transformers package by huggingface. The model converts a character-tokenised sentence into a $768$-dimension embedding which we use as the output for our classifier. Given the low dimensionality of our output, we choose the simplest model architecture possible: a one-layer perceptron with a non-linearity (sigmoid), a linear layer and a log softmax output processing layer.
 
 In our experiments, we were able to achieve a labelling accuracy of $.794$ for our generated formality label data. We observe similar movements in train and dev accuracy and loss during training, as well as comparable test accuracy compared to train and dev accuracy. Given the size of our test data set ($152576$), we believe our results are robust and not the result of any fortuitous statistical event.
 
@@ -208,11 +208,16 @@ We decompose the usual encoder-decoder, using the encoder output as the basis fo
 
 The choice of the hyper-parameter representing the weight of formality label loss in the total loss was initially chosen to be $.5$. We found that under such a split, the reconstruction performance was somewhat affected ($72.6$ BLEU score, compared to $79.2$ without classification loss). The classification accuracy at $.995$ is extremely good and achieves our objectives completely .
 
-translation weight $9$, formality label accuracy $.992$, BLEU score $68.6$
-translation weight $3$, formality label accuracy $.995$, BLEU score $73.0$
-translation weight $1$, formality label accuracy $.995$, BLEU score $72.6$
-translation weight $.1$, formality label accuracy $.993$, BLEU score $69.0$
-translation weight $.01$, formality label accuracy $.993$, BLEU score $54.9$
+We adjusted the relative weight between translation loss and formality classification loss, and was able to get the following results:
+
+\begin{tabular}{ c c c c }
+    Translation loss weight & Formality classification accuracy & BLEU score \\
+    $.9$ & $.992$ & $68.6$ \\
+    $.75$ & $.995$ & $73.0$ \\
+    $.5$ & $.995$ & $72.6$ \\
+    $.09$ & $.993$ & $69.0$ \\
+    $.0099$ & $.993$ & $54.9$ \\
+\end{tabular}
 
 \subsection{Formality Autoencoder}
 
