--- a/report.tex
+++ b/report.tex
@@ -190,6 +190,8 @@ We first build a base translation model that doesn't take formality into account
 
 The base translation model we choose for our task an autoregressive transformer model \cite{vaswani2017attention}, which was selected due to its success in machine translation \cite{liu2020deep}. The encoder-decoder construction is significant for us, since the pooled encoder output is going to be the basis for our formality classifier (similar to what we did with the pre-trained Japanese BERT).
 
+Due to the autoregressive nature of our model, in the interest of time saving, we limit the maximum length of each sentence to $15$. Sentences that had a greater length were discarded.
+
 For Japanese language pre-processing, we relied on the sentence tokenisation tool by Mecab \cite{Kudo2005MeCabY}. For pre-processing English sentences, we used the tokenisation tool by fairseq \cite{ott2019fairseq}.
 
 We encountered significant difficulties when constructing the base Japanese to English translator. Due to the diverse and noisy nature of our corpus, as well as the tendency towards subject omission in Japanese, our translator could not perform even the most basic translation task, regardless of the hyper-parameters we choose. We found that careful pre-processing of our data goes a long way to helping the performance of the base translator: after pruning our dataset down to around $20\%$ its original size and consisting only of grammatically complete sentences, our model could reach a respectable performance on the held-out part of the cleaned dataset ($26.3$ BLEU score) while also perform reasonably well on the original larger dataset.
@@ -202,16 +204,16 @@ On our Japanese corpus, we were able to achieve a BLEU score of $79.2$ when benc
 
 \subsection{Adding the Classifier}
 
-We decompose the usual encoder-decoder, using the encoder output as the basis for the formality labelling task. We build a separate classification module which takes encoder output as input and produces a formality label prediction. During training time, the loss function is constructed as a weighted sum of the translation loss and the formality label loss.
+We decompose the usual encoder-decoder, using the encoder output as the basis for the formality labelling task. We build a separate classification module which takes encoder output as input and produces a formality label prediction. During training time, the loss function is constructed as a weighted sum of the translation loss (or sentence reconstruction loss) and the formality label loss.
 
 \subsubsection{Autoencoder-Reconstructor plus Classifier}
 
 The choice of the hyper-parameter representing the weight of formality label loss in the total loss was initially chosen to be $.5$. We found that under such a split, the reconstruction performance was somewhat affected ($72.6$ BLEU score, compared to $79.2$ without classification loss). The classification accuracy at $.995$ is extremely good and achieves our objectives completely .
 
-We adjusted the relative weight between translation loss and formality classification loss, and was able to get the following results:
+We adjusted the relative weight between sentence reconstruction loss and formality classification loss, and was able to get the following results:
 
 \begin{tabular}{ c c c c }
-    Translation loss weight & Formality classification accuracy & BLEU score \\
+    Reconstruction loss weight & Formality classification accuracy & BLEU score \\
     $.9$ & $.992$ & $68.6$ \\
     $.75$ & $.995$ & $73.0$ \\
     $.5$ & $.995$ & $72.6$ \\
@@ -221,7 +223,14 @@ We adjusted the relative weight between translation loss and formality classific
 
 \subsection{Formality Autoencoder}
 
-This setting can been seen extending the base autoencoder setting. Here we combine the encoder output with the output of the classifier and feed it back to a decoder which emits a sequence in the source language. We then measure how well the model preserves both the meaning and the formality of the original sentence.
+Now that we have an encoder and a classifier which can combine to identify formality with a very high accuracy, the next step involves actually generating sentences that are formality-appropriate: ie., the procedural formality classification script would put the generated sentences into the same formality category as it would the corresponding original sentences.
+
+Our training objective is designed as such: we first pre-trained an encoder and a classifier with the autoencoder-classifier. We choose the optimal loss ratio ($.75$ sentence reconstruction loss, $.25$ classifier loss) during pre-training. We then train a formality-aware decoder which generates an output sentence using the output of the pre-trained encoder as input. The generated sentence is then passed through the encoder-classifier again, creating a formality label for the generated sentence.
+
+The loss function of this task is composed again of $2$ parts: the sentence reconstruction loss, and the output formality accuracy loss. We first experiment with giving equal weights to the two loss components, and was able to get $71.1$ BLEU score on the sentence reconstruction task.
+
+The baseline approach (the decoder that was trained jointly with the encoder-classifier) was able to achieve a $.813$ accuracy on reconstruted sentence formality accuracy, whereas the one trained on the revised objective only achieved a $.763$ accuracy. This is despite the system reporting a confidence of $.923$ about having generated the sentences with the correct formality. As such, we conclude that the joint training scheme was ineffective at assuring translated sentence formality.  
+
 
 \subsection{Formality-Aware Translation}
 
