--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,10 @@
 \usepackage{graphicx}
 \usepackage{indentfirst}
 \usepackage[dvipsnames]{xcolor}
-\usepackage{CJKutf8}
+\usepackage{xeCJK}
+\setCJKmainfont{IPAMincho}
+\setCJKsansfont{IPAGothic}
+\setCJKmonofont{IPAGothic}
 
 \usepackage{listings}
 
@@ -88,7 +91,6 @@ style=alphabetic,
 
 
 \begin{document}
-\begin{CJK}{UTF8}{min}
 \title{Multi Politeness-Domain Neural Machine Translation for Japanese and Korean}
 
 \author{Henry Li Xinyuan, Jerry Chen, Ray Lee}
@@ -288,6 +290,8 @@ This is the generalised version of the formality autoencoder, where the target l
 
 \subsection{Formality-Aware back-translation}
 
+$18.2$ BLEU score, $29.0$ RIBES score, $.236$ formality reconstruction accuracy. 
+
 \section{Evaluation}
 
 We propose a number of different ways to evaluate the translation quality and the sentence reconstruction quality for our different tasks. We analyse the level of correlation between these different metrics on different tasks.
@@ -299,40 +303,46 @@ We use the NLTK toolkit \cite{NLTK} to evaluate the BLEU score of our translatio
 \subsection{Manual, Human Evaluation}
 To manually evaluate the translations with human eyes, we randomly sampled 261 (an arbitrary but large enough number) sentences. Among these sentences, we noticed certain patterns in both successful translations and potentially questionable ones. 
 
-The first type of common difficulty was cases where the Japanese sentences omitted some sort of information in the sentence, likely due to it being obvious contextually. Unfortunately for the machine, it is not given this context, so it must sometimes translate incomplete sentences and essentially make an educated guess at certain contexts. Sometimes, it actually manages to do a good job at this, preserving the overall meaning of the phrase. For example:\newline
+The first type of common difficulty was cases where the Japanese sentences omitted some sort of information in the sentence, likely due to it being obvious contextually. Unfortunately for the machine, it is not given this context, so it must sometimes translate incomplete sentences and essentially make an educated guess at certain contexts. Sometimes, it actually manages to do a good job at this, preserving the overall meaning of the phrase. For example: 
 
-5百万回も見られることになりました  is translated into
+"5百万回も見られることになりました"  is translated into: 
 
-Seen five million times.\newline
+"Seen five million times."
 
 In this case, the Japanese sentence is missing a subject. “Seen five million times” is a good word-for-word translation, but any Japanese person would understand that there’s some object that being seen. Without contextual knowledge, the best way to handle this may be to use a generic pronoun, such as “it,” creating the sentence, “it will be seen five million times.” In this sentence specifically, the information contained in “will be” is also missing from our translation. Many other translations of this same structure were also missing tense information though, so we suspect that it has something to do with time-determiners like “will” or “has” being treated as attached to a subject; ie. they would be missing should the subject be missing.
 
-There are some sentences where the translation loses information, though in many of these cases, the translation in still reasonable and sometimes even more reasonable without context. For example:\newline
+There are some sentences where the translation loses information, though in many of these cases, the translation in still reasonable and sometimes even more reasonable without context. For example:
 
-何するんだサイラス is translated into
+"何するんだサイラス" is translated into
 
-What are you doing Cyrus?\newline
+"What are you doing Cyrus?"
 
 The translation provided in the parallel corpus is, “what the hell are you doing, Cyrus?” The “the hell” part got left out, but there’s no word in the Japanese sentence the means “the hell.” That information would entirely be gained from context or tone. As such, this is an interesting case where context-aside, the machine translation might be considered better than what a BLEU or RIBES score might say. Of course, this still speaks to the machine’s weakness in situations where it does need to know context.
 
-Finally, there are some sentences where the translation adds information. These are rare, and it’s hard to find a pattern in why it’s occurring, as the situations in which it occurs are varied. Often times the additions are conjunctions or articles rather than full on noun or verb phrases. For example:\newline
+Finally, there are some sentences where the translation adds information. These are rare, and it’s hard to find a pattern in why it’s occurring, as the situations in which it occurs are varied. Often times the additions are conjunctions or articles rather than full on noun or verb phrases. For example: 
 
-ジョーンズは味方だよ is translated into
+"ジョーンズは味方だよ" is translated into
 
-and jones is on our side.\newline
+"and jones is on our side."
 
 The translation is pretty accurate, but the “and” is completely new information created by the translator. One could suspect that it has something to do with Katakana being present in the sentences, as Katakana is often used to loan/foreign words that needs to just be sounded out. This happens in cases without Katakana, and the Katakana is those cases is usually translated correctly without showing any other obvious errors stemming from an issue relating to its use, so we think that this is not the case. 
 
-	The patterns mentioned are the ones seen most often when the translations are close but not perfect. Aside from these, most incorrect translations just fail to capture the meaning entirely or are absurd. Some are closer than others, of course, but once they’re not close enough to correct, it’s difficult to spot meaningful patterns.
-
-
-\subsection{Sentence Embedding Similarity}
-
-Comparing the embedding similarity of two sentences is hardly a trivial problem. In order to make our evaluation task tractable, we use a rather trivial construction where we define the embedding of a sentence as the average embedding of all word embeddings in the sentence. We then define sentence similarity as the dot product between the embedding of the two sentences. 
+The patterns mentioned are the ones seen most often when the translations are close but not perfect. Aside from these, most incorrect translations just fail to capture the meaning entirely or are absurd. Some are closer than others, of course, but once they’re not close enough to correct, it’s difficult to spot meaningful patterns.
 
 \subsection{Formality Class accuracy}
 
 Our model's understanding of formality is undoubtedly one of the most important aspects of its performance. There are two different angles to formality: the model's classification of input formality, as well as the correctness of the formality of the sentence generated by our model with respect to the original sentence. The former is relatively straightforward to evaluate; the latter requires either running the output sentences on the procedural formality classification script we used to produce our corpora, or to have someone familiar with the Japanese (or Korean, English) language evaluate them manually.
+
+\subsection{Other evaluation metrics}
+
+Here we briefly discuss other evaluation metrics that we considered using but which didn't make it into the final pipeline.
+
+\subsubsection{Sentence Embedding Similarity}
+
+Comparing the embedding similarity of two sentences is hardly a trivial problem. In order to make our evaluation task tractable, we use a rather trivial construction where we define the embedding of a sentence as the average embedding of all word embeddings in the sentence. We then define sentence similarity as the dot product between the embedding of the two sentences. 
+
+We observe that, while such an approach would allow for the model to learn directly from the final evaluation metric (since the sentence embedding similarity could be back-propagated), it would additional complexity and thus computation overhead to our existing pipeline due to the need for a sentence embedder. It is also not immediately obvious whether a pre-trained sentence embedding should be used, or whether we should train a separate encoder instead. Finally, sentence embedding similarity has no obvious connection to our ultimate goal: formality-aware translation. As such, we decided against using sentence embedding similarity as our evaluation metric.
+
 
 \section{Future work}
 
@@ -352,5 +362,4 @@ Since our encoders are language-dependent, for formality encoding to be transfer
 
 \newpage
 \printbibliography
-\end{CJK}
 \end{document}
